[gd_scene load_steps=5 format=3 uid="uid://bcfdhv8ugcb24"]

[ext_resource type="Script" path="res://scripts/wallhide.gd" id="1_n0wmr"]
[ext_resource type="Script" path="res://scripts/ray.gd" id="2_nphbk"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_8qltm"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7mbv7"]
size = Vector3(1.3, 1, 0.1)

[node name="WallHideSystem" type="Node3D"]
script = ExtResource("1_n0wmr")

[node name="ray" type="Area3D" parent="."]
transform = Transform3D(1, 0, -1.78814e-07, 0, 1, 0, 1.78814e-07, 0, 1, 0, 0, 0)
collision_layer = 2147483648
collision_mask = 2147483648
monitoring = false
script = ExtResource("2_nphbk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ray"]
shape = SubResource("SeparationRayShape3D_8qltm")

[node name="east" type="Area3D" parent="."]
collision_layer = 2147483648
collision_mask = 2147483648
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="east"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5)
shape = SubResource("BoxShape3D_7mbv7")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="east"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.6, 0, 0.6)
shape = SubResource("BoxShape3D_7mbv7")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="east"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.6, 0, 0.6)
shape = SubResource("BoxShape3D_7mbv7")

[node name="north" type="Area3D" parent="."]
collision_layer = 2147483648
collision_mask = 2147483648
monitorable = false

[node name="CollisionShape3D2" type="CollisionShape3D" parent="north"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.5, 0, 2.98023e-08)
shape = SubResource("BoxShape3D_7mbv7")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="north"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0.6, 0, 0.6)
shape = SubResource("BoxShape3D_7mbv7")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="north"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0.6, 0, -0.6)
shape = SubResource("BoxShape3D_7mbv7")

[node name="west" type="Area3D" parent="."]
collision_layer = 2147483648
collision_mask = 2147483648
monitorable = false

[node name="CollisionShape3D3" type="CollisionShape3D" parent="west"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.98023e-08, 0, -0.5)
shape = SubResource("BoxShape3D_7mbv7")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="west"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.6, 0, -0.6)
shape = SubResource("BoxShape3D_7mbv7")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="west"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.6, 0, -0.6)
shape = SubResource("BoxShape3D_7mbv7")

[node name="south" type="Area3D" parent="."]
collision_layer = 2147483648
collision_mask = 2147483648
monitorable = false

[node name="CollisionShape3D4" type="CollisionShape3D" parent="south"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.5, 0, 2.98023e-08)
shape = SubResource("BoxShape3D_7mbv7")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="south"]
transform = Transform3D(1, 0, 1.06581e-14, 0, 1, 0, -1.06581e-14, 0, 1, -0.6, 0, -0.6)
shape = SubResource("BoxShape3D_7mbv7")

[node name="CollisionShape3D6" type="CollisionShape3D" parent="south"]
transform = Transform3D(1, 0, 1.06581e-14, 0, 1, 0, -1.06581e-14, 0, 1, -0.6, 0, 0.6)
shape = SubResource("BoxShape3D_7mbv7")

[connection signal="area_entered" from="east" to="." method="_on_east_area_entered"]
[connection signal="area_exited" from="east" to="." method="_on_east_area_exited"]
[connection signal="area_entered" from="north" to="." method="_on_north_area_entered"]
[connection signal="area_exited" from="north" to="." method="_on_north_area_exited"]
[connection signal="area_entered" from="west" to="." method="_on_west_area_entered"]
[connection signal="area_exited" from="west" to="." method="_on_west_area_exited"]
[connection signal="area_entered" from="south" to="." method="_on_south_area_entered"]
[connection signal="area_exited" from="south" to="." method="_on_south_area_exited"]
